@startuml clases_servidor
title Diagrama de Clases — Paquetes de Servidor y Cliente

skinparam classAttributeIconSize 0
skinparam classFontSize 13
skinparam packageFontSize 13
skinparam ArrowColor #444444
skinparam ClassBackgroundColor #FEFEFE
skinparam ClassBorderColor #888888

' ─────────────────────────────────────────
' Referencia externa al paquete de modelos
' ─────────────────────────────────────────
class PaqueteRed <<(D,#EAF4FF) DTO>> {
    (ver diagrama de modelos)
}

' ─────────────────────────────────────────
' PAQUETE: server/managers
' ─────────────────────────────────────────
package "whatsapp.server.managers" #FFF8EA {

    class SessionManager {
        - sesionesActivas : Map<String, ManejadorCliente> {final}
        - monitorLock : Object {final}
        --
        + SessionManager()
        + registrarUsuario(idUsuario : String, manejador : ManejadorCliente) : boolean
        + removerUsuario(idUsuario : String) : void
        + obtenerSesion(idUsuario : String) : ManejadorCliente
    }

    class GroupManager {
        - gruposActivos : Map<String, List<String>> {final}
        - rwLock : ReadWriteLock {final}
        --
        + GroupManager()
        + registrarGrupo(idGrupo : String, idCreador : String) : void
        + agregarMiembro(idGrupo : String, idUsuario : String) : boolean
        + obtenerCopiaMiembros(idGrupo : String) : List<String>
    }
}

' ─────────────────────────────────────────
' PAQUETE: server/handlers
' ─────────────────────────────────────────
package "whatsapp.server.handlers" #F0FFF0 {

    class ManejadorCliente {
        - socket : Socket {final}
        - sessionManager : SessionManager {final}
        - groupManager : GroupManager {final}
        - out : ObjectOutputStream
        - in : ObjectInputStream
        - idUsuarioAsignado : String
        --
        + ManejadorCliente(socket, sessionManager, groupManager)
        + run() : void
        - procesarPaquete(paquete : PaqueteRed) : void
        + enviarObjeto(paquete : PaqueteRed) : void
        - procesarMensajePrivado(msg : PaqueteMensaje) : void
        - procesarMensajeGrupal(msg : PaqueteMensaje) : void
        - liberarRecursos() : void
    }
}

' ─────────────────────────────────────────
' PAQUETE: server/core
' ─────────────────────────────────────────
package "whatsapp.server.core" #FFF0F0 {

    class ServidorPrincipal {
        - PUERTO : int {static} {final} = 2346
        --
        + main(args : String[]) {static}
    }
}

' ─────────────────────────────────────────
' PAQUETE: client
' ─────────────────────────────────────────
package "whatsapp.client" #F5F0FF {

    class ClienteNodo {
        - HOST : String {static} = "localhost"
        - PUERTO : int {static} = 2346
        - socket : Socket
        - out : ObjectOutputStream
        - in : ObjectInputStream
        - miId : String
        --
        + main(args : String[]) {static}
        + iniciar() : void
        - procesarComandos(scanner : Scanner) : void
        - escucharServidor() : void
    }
}

' ─────────────────────────────────────────
' NOTAS
' ─────────────────────────────────────────
note right of SessionManager
    Patrón Monitor
    synchronized(monitorLock)
end note

note right of GroupManager
    Patrón Read-Write Lock
    Copias defensivas en lectura
end note

note right of ManejadorCliente
    Extiende Thread.
    Un hilo por cliente conectado.
end note

note right of ServidorPrincipal
    Escucha en ServerSocket(2346).
    Instancia Singletons e inyecta
    dependencias en ManejadorCliente.
end note

note right of ClienteNodo
    Dos hilos: escucha de red (daemon)
    y lectura de comandos del usuario.
end note

' ─────────────────────────────────────────
' RELACIONES
' ─────────────────────────────────────────
ServidorPrincipal ..> ManejadorCliente : <<crea>>
ServidorPrincipal ..> SessionManager   : <<instancia>>
ServidorPrincipal ..> GroupManager     : <<instancia>>

ManejadorCliente --> SessionManager    : usa (DI)
ManejadorCliente --> GroupManager      : usa (DI)
ManejadorCliente ..> PaqueteRed        : deserializa / envía
SessionManager   --> ManejadorCliente  : almacena referencia

ClienteNodo ..> PaqueteRed             : serializa / recibe

@enduml
